--- a/src/scss/_sectionOne.scss
+++ b/src/scss/_sectionOne.scss
@@ -8,6 +8,7 @@ body {
       background-image: url("https://i.imgur.com/A5BKmX9.jpg");
       background-color: #2c3e50;
       background-size: cover;
+      background-repeat: no-repeat;
       background-position-y: -50px;
       display: flex;
       flex-direction: column;
@@ -24,6 +25,11 @@ body {
         margin-top: 10px;
       }
     }
+    @media (max-width: 900px) {
+      header {
+        background-size: 100vh;
+      }
+    }
     label {
       letter-spacing: 1px;
     }
@@ -35,7 +41,7 @@ body {
       display: block;
     }
     form {
-      margin-top: 20px;
+      margin-top: 40px;
       margin-bottom: 10px;
       select {
         margin: 10px auto 0;
@@ -50,8 +56,8 @@ body {
     }
     #images {
       .images__container {
-        width: 70vw;
-        margin: 20px auto;
+        width: 80vw;
+        margin: 40px auto;
         columns: 4 !important;
         column-gap: 4px;
         .image__wrapper {
@@ -59,13 +65,13 @@ body {
           padding-bottom: 4px;
           break-inside: avoid;
           .image {
-            width: calc(70vw / 4 - 3px);
+            width: calc(80vw / 4 - 3px);
           }
         }
       }
       @media (max-width: 1200px) {
         .images__container {
-          width: 70vw;
+          width: 80vw;
           margin: 20px auto;
           columns: 3 !important;
           column-gap: 4px;
@@ -74,14 +80,14 @@ body {
             padding-bottom: 4px;
             break-inside: avoid;
             .image {
-              width: calc(70vw / 3 - 3px);
+              width: calc(80vw / 3 - 3px);
             }
           }
         }
       }
-      @media (max-width: 800px) {
+      @media (max-width: 850px) {
         .images__container {
-          width: 70vw;
+          width: 90vw;
           margin: 20px auto;
           columns: 2 !important;
           column-gap: 4px;
@@ -90,23 +96,22 @@ body {
             padding-bottom: 4px;
             break-inside: avoid;
             .image {
-              width: calc(70vw / 2 - 3px);
+              width: calc(90vw / 2 - 3px);
             }
           }
         }
       }
       @media (max-width: 500px) {
         .images__container {
-          width: 70vw;
+          width: 100vw;
           margin: 20px auto;
           columns: 1 !important;
           // column-gap: 4px;
           .image__wrapper {
             width: 100%;
             padding: 4px;
-            break-inside: avoid;
             .image {
-              width: 70vw;
+              width: calc(100vw - 10px);
             }
           }
         }
