--- a/src/scss/_sectionOne.scss
+++ b/src/scss/_sectionOne.scss
@@ -1,6 +1,7 @@
 body {
   background: #f3f5f6;
   main {
+    min-height: 100vh;
     header {
       height: 500px;
       margin-top: 0;
@@ -50,7 +51,7 @@ body {
         height: 30px;
         border: 1px solid black;
         font-weight: 400;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
       }
       select:focus {
         outline: none;
