--- a/src/scss/_sectionOne.scss
+++ b/src/scss/_sectionOne.scss
@@ -1,38 +1,39 @@
 body {
   background: #f3f5f6;
+
+  header {
+    height: 400px;
+    margin-top: 0;
+    position: relative;
+    background-image: url("https://i.imgur.com/hjZ89es.png");
+    background-color: #2c3e50;
+    background-size: 100vw auto;
+    background-repeat: no-repeat;
+    background-position-y: 80%;
+    background-position-x: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    h1,
+    p {
+      position: relative;
+      color: white;
+      font-weight: 700;
+      letter-spacing: 1px;
+      margin: 0;
+    }
+    p {
+      margin-top: 10px;
+    }
+  }
+  @media (max-width: 1760px) {
+    header {
+      background-size: 2000px;
+      background-position-y: 80%;
+    }
+  }
   main {
     min-height: 100vh;
-    header {
-      height: 500px;
-      margin-top: 0;
-      position: relative;
-      background-image: url("https://i.imgur.com/hjZ89es.png");
-      background-color: #2c3e50;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position-y: -500px;
-      background-position-x: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      h1,
-      p {
-        position: relative;
-        color: white;
-        font-weight: 700;
-        letter-spacing: 1px;
-        margin: 0;
-      }
-      p {
-        margin-top: 10px;
-      }
-    }
-    @media (max-width: 1760px) {
-      header {
-        background-size: auto 100vh;
-        background-position-y: -400px;
-      }
-    }
     label {
       letter-spacing: 1px;
     }
