--- a/src/scss/_sectionOne.scss
+++ b/src/scss/_sectionOne.scss
@@ -22,8 +22,36 @@ body {
       letter-spacing: 1px;
       margin: 0;
     }
+    form {
+      margin-top: 40px;
+      margin-bottom: 10px;
+      input {
+        border: none;
+        width: 300px;
+        text-align: center;
+        border-radius: 24px;
+        padding: 5px;
+      }
+      input:focus {
+        outline: none;
+      }
+    }
     p {
-      margin-top: 10px;
+      font-weight: 400;
+      font-size: 14px;
+      color: #dddddf;
+      span:nth-of-type(1) {
+        color: white;
+      }
+      @media (max-width: 500px) {
+        span:nth-of-type(1) {
+          display: none;
+        }
+      }
+      .examples:hover {
+        cursor: pointer;
+        color: white;
+      }
     }
   }
   @media (max-width: 1760px) {
@@ -36,27 +64,6 @@ body {
     min-height: 100vh;
     label {
       letter-spacing: 1px;
-    }
-    label,
-    select {
-      font-weight: 500;
-      font-family: "Roboto", sans-serif;
-      font-size: 18px;
-      display: block;
-    }
-    form {
-      margin-top: 40px;
-      margin-bottom: 10px;
-      select {
-        margin: 20px auto 0;
-        height: 30px;
-        border: 1px solid black;
-        font-weight: 400;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-      }
-      select:focus {
-        outline: none;
-      }
     }
     #images {
       .images__container {
@@ -123,7 +130,7 @@ body {
     }
   }
   footer {
-    height: 80px;
+    height: 60px;
     background: #2c3e50;
     display: flex;
     flex-direction: column;
@@ -133,7 +140,7 @@ body {
       font-family: "roboto", sans-serif;
       color: white;
       margin: 0;
-      font-size: 16px;
+      font-size: 12px;
       a {
         color: white;
         text-decoration: underline;
@@ -143,7 +150,7 @@ body {
       }
     }
     .credit {
-      margin-bottom: 5px;
+      margin-bottom: 2px;
     }
   }
 }
