--- a/src/scss/_sectionOne.scss
+++ b/src/scss/_sectionOne.scss
@@ -67,22 +67,21 @@ body {
     }
     #images {
       .images__container {
-        width: 80vw;
+        width: calc(80vw + 12px);
         margin: 40px auto;
         columns: 4 !important;
-        column-gap: 4px;
         .image__wrapper {
           width: 100%;
           padding-bottom: 4px;
           break-inside: avoid;
           .image {
-            width: calc(80vw / 4 - 3px);
+            width: calc(80vw / 4 + 2px);
           }
         }
       }
       @media (max-width: 1200px) {
         .images__container {
-          width: 80vw;
+          width: calc(80vw + 8px);
           margin: 20px auto;
           columns: 3 !important;
           column-gap: 4px;
@@ -91,23 +90,22 @@ body {
             padding-bottom: 4px;
             break-inside: avoid;
             .image {
-              width: calc(80vw / 3 - 3px);
+              width: calc(80vw / 3);
             }
           }
         }
       }
       @media (max-width: 850px) {
         .images__container {
-          width: 90vw;
+          width: calc(90vw + 4px);
           margin: 20px auto;
           columns: 2 !important;
-          column-gap: 4px;
           .image__wrapper {
             width: 100%;
             padding-bottom: 4px;
             break-inside: avoid;
             .image {
-              width: calc(90vw / 2 - 3px);
+              width: calc(90vw / 2);
             }
           }
         }
@@ -121,7 +119,7 @@ body {
             width: 100%;
             padding: 4px;
             .image {
-              width: calc(100vw - 10px);
+              width: calc(100vw);
             }
           }
         }
