--- a/src/scss/_sectionOne.scss
+++ b/src/scss/_sectionOne.scss
@@ -28,9 +28,12 @@ body {
       input {
         border: none;
         width: 300px;
-        text-align: center;
+        // text-align: center;
         border-radius: 24px;
-        padding: 5px;
+        padding: 5px 16px;
+      }
+      input[type="text"]::placeholder {
+        text-align: center;
       }
       input:focus {
         outline: none;
@@ -128,7 +131,7 @@ body {
   }
   footer {
     height: 60px;
-    background: #2c3e50;
+    background: #282828;
     display: flex;
     flex-direction: column;
     align-items: center;
